--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,16 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
+  justify-content: space-between;
+}
+
+.links {
+  display: flex;
+  gap: 16px;
+  margin: 0px;
+  padding: 0px;
 }
 
 .profile-image {
@@ -35,6 +45,12 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+}
+
+.left, .icons {
+  display: flex;
+  gap: 16px;
+  align-items: center;
 }
 
 a {
